# telegram-toolkit-mcp

./: .cursorignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DEPLOY_VPS.md  Dockerfile  FIX_CONTAINER.md  README.md  VPS_QUICK_FIX.md  deploy.sh  docker-compose.yml  env.example  mcp_check.py  mcp_smoketest.sh  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  telegram-mcp.service  test_advanced_mcp_client.py  test_full_mcp_flow.py
.cursor/rules/: must-have-rules.mdc  python-project-rules.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  dependency-updates.yml
docs/: api.md  performance.md  tracing.md
examples/simple-client/: env.example
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/adr/: production-deployment-architecture.md
schemas/: meta-schema.json
scripts/: README.md  auth_telegram_session.py  check_env.py  run_all_tests.py  run_e2e_tests.py  run_performance_tests.py  test_api_connectivity.py  test_e2e_resolve_chat.py  test_resolve_chat_e2e.py  test_session_simple.py  test_telegram_connection.py  validate_environment.py  verify_telegram_auth.py
scripts/auth/: auth_telegram_session.py  verify_telegram_auth.py
scripts/deploy/: DEPLOYMENT.md  deploy.sh  test_domain_replacement.sh
scripts/testing/: run_all_tests.py  run_e2e_tests.py  run_integration_tests.py  run_performance_tests.py  run_server_podman.py  run_unit_tests.py  test_config.py  test_transports.py
scripts/validation/: README.md  debug_endpoints.sh  debug_mcp_500.py  diagnose_vps.sh  test_api_connectivity.py  test_mcp_success.py  test_resolve_chat_e2e.py  validate_environment.py  verify_vps_deployment.py
src/telegram_toolkit_mcp/: __init__.py  server.py
src/telegram_toolkit_mcp/core/: __init__.py  error_handler.py  filtering.py  monitoring.py  ndjson_resources.py  pagination.py  performance.py  telegram_client.py  tracing.py
src/telegram_toolkit_mcp/models/: __init__.py  types.py
src/telegram_toolkit_mcp/tools/: __init__.py  fetch_history.py  resolve_chat.py
src/telegram_toolkit_mcp/utils/: __init__.py  config.py  logging.py  security.py
tests/: __init__.py  conftest.py
tests/e2e/: test_mcp_server_basic_e2e.py  test_mcp_server_e2e.py  test_mcp_server_functional_e2e.py  test_telegram_toolkit_e2e.py
tests/integration/: __init__.py  test_metrics_error_handler_integration.py  test_pagination_filtering_integration.py  test_security_telegram_client_integration.py  test_telegram_client_error_handler_integration.py
tests/unit/: test_error_handler.py  test_monitoring.py  test_security.py
